fix: data-console design - white-space nowrap

--- a/index.css/style.css
+++ b/index.css/style.css
@@ -18,4 +18,9 @@
     right: 0;
     background: rgb(0 0 0 / 90%);
     color: white;
+
+    white-space: nowrap;
 }
+
+
+
